--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "getllms"
-version = "0.5"
-description = "The LLMs Index. Download LLMs to use locally."
+version = "1.0"
+description = "Download LLMs to use locally."
 keywords = ["getllms", "llm", "llms", "index", "download", "ai", "gpt", "llama"]
 authors = [
   { name = "AWeirdDev", email = "aweirdscratcher@gmail.com" },
@@ -19,7 +19,8 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 dependencies = [
-  "requests"
+  "requests",
+  "holdon"
 ]
 
 [project.urls]
